--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -199,7 +199,9 @@
     <ClInclude Include="src\lib\ArrayIndexGenerator.h" />
     <ClInclude Include="src\core\RaceDistanceCalculator.h" />
     <ClInclude Include="src\lib\IComparator.h" />
+    <ClInclude Include="src\model\ShipCompletedRaceDistanceComparator.h" />
     <ClInclude Include="src\lib\QuickSort.h" />
+    <ClInclude Include="src\core\RacePositionUpdater.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -372,6 +374,8 @@
     <ClCompile Include="src\render\mesh\TrackMesh.cpp" />
     <ClCompile Include="src\lib\ArrayIndexGenerator.cpp" />
     <ClCompile Include="src\core\RaceDistanceCalculator.cpp" />
+    <ClCompile Include="src\model\ShipCompletedRaceDistanceComparator.cpp" />
+    <ClCompile Include="src\core\RacePositionUpdater.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
