--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -150,7 +150,7 @@
     <ClInclude Include="src\core\cm\BulletCollisionDetector.h" />
     <ClInclude Include="src\core\cm\BulletCollisionProcessor.h" />
     <ClInclude Include="src\core\ShipStateLogic.h" />
-    <ClInclude Include="src\render\dash\PlayerShipHealthRenderer.h" />
+    <ClInclude Include="src\render\dash\HealthRenderer.h" />
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\FramedTexture.h" />
     <ClInclude Include="src\render\common\ExplosionRenderer.h" />
@@ -337,7 +337,7 @@
     <ClCompile Include="src\core\cm\BulletCollisionDetector.cpp" />
     <ClCompile Include="src\core\cm\BulletCollisionProcessor.cpp" />
     <ClCompile Include="src\core\ShipStateLogic.cpp" />
-    <ClCompile Include="src\render\dash\PlayerShipHealthRenderer.cpp" />
+    <ClCompile Include="src\render\dash\HealthRenderer.cpp" />
     <ClCompile Include="src\gl\AnimatedTexturedRect.cpp" />
     <ClCompile Include="src\gl\FramedTexture.cpp" />
     <ClCompile Include="src\render\common\ExplosionRenderer.cpp" />
