--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -130,7 +130,7 @@
     <ClInclude Include="src\render\common\TrackThumbnailGridRenderer.h" />
     <ClInclude Include="src\render\common\TrackThumbnailRenderer.h" />
     <ClInclude Include="src\render\dash\NitroCountRenderer.h" />
-    <ClInclude Include="src\render\dash\PlayerShipHealthRenderer.h" />
+    <ClInclude Include="src\render\dash\HealthRenderer.h" />
     <ClInclude Include="src\render\common\StarsRenderer.h" />
     <ClInclude Include="src\render\dash\RacePositionRenderer.h" />
     <ClInclude Include="src\render\effect\FadeEffect.h" />
@@ -337,7 +337,7 @@
     <ClCompile Include="src\render\common\TrackThumbnailGridRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailRenderer.cpp" />
     <ClCompile Include="src\render\dash\NitroCountRenderer.cpp" />
-    <ClCompile Include="src\render\dash\PlayerShipHealthRenderer.cpp" />
+    <ClCompile Include="src\render\dash\HealthRenderer.cpp" />
     <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
     <ClCompile Include="src\render\dash\RacePositionRenderer.cpp" />
     <ClCompile Include="src\render\effect\FadeEffect.cpp" />
