--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -60,11 +60,13 @@
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\Face.h" />
     <ClInclude Include="src\calc\ModelMatrix.h" />
+    <ClInclude Include="src\gl\ITexturedRect.h" />
     <ClInclude Include="src\gl\ShaderProgram.h" />
     <ClInclude Include="src\gl\FramedTexture.h" />
     <ClInclude Include="src\gl\ImageFile.h" />
     <ClInclude Include="src\gl\Mesh.h" />
     <ClInclude Include="src\gl\MeshLoader.h" />
+    <ClInclude Include="src\gl\ShadowedTexturedRect.h" />
     <ClInclude Include="src\gl\Texture.h" />
     <ClInclude Include="src\anx\GraphicResources.h" />
     <ClInclude Include="src\gl\TexturedRect.h" />
@@ -279,6 +281,7 @@
     <ClCompile Include="src\gl\MeshLoader.cpp" />
     <ClCompile Include="src\calc\ModelMatrix.cpp" />
     <ClCompile Include="src\gl\ShaderProgram.cpp" />
+    <ClCompile Include="src\gl\ShadowedTexturedRect.cpp" />
     <ClCompile Include="src\gl\Texture.cpp" />
     <ClCompile Include="src\anx\GraphicResources.cpp" />
     <ClCompile Include="src\gl\TexturedRect.cpp" />
