--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -203,6 +203,8 @@
     <ClInclude Include="src\lib\QuickSort.h" />
     <ClInclude Include="src\core\RacePositionUpdater.h" />
     <ClInclude Include="src\render\dash\RacePositionRenderer.h" />
+    <ClInclude Include="src\gl\ShadowedTexturedRect.h" />
+    <ClInclude Include="src\gl\ITexturedRect.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -378,6 +380,7 @@
     <ClCompile Include="src\model\ShipCompletedRaceDistanceComparator.cpp" />
     <ClCompile Include="src\core\RacePositionUpdater.cpp" />
     <ClCompile Include="src\render\dash\RacePositionRenderer.cpp" />
+    <ClCompile Include="src\gl\ShadowedTexturedRect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
