--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -76,7 +76,7 @@
     <ClInclude Include="src\input\Keyboard.h" />
     <ClInclude Include="src\lib\ArrayIndexGenerator.h" />
     <ClInclude Include="src\lib\Assert.h" />
-    <ClInclude Include="src\lib\CycledArrayIterator.h" />
+    <ClInclude Include="src\lib\CycledIterator.h" />
     <ClInclude Include="src\lib\DateTime.h" />
     <ClInclude Include="src\lib\Debug.h" />
     <ClInclude Include="src\lib\Dictionary.h" />
