--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -205,6 +205,7 @@
     <ClInclude Include="src\gl\ShadowedTexturedRect.h" />
     <ClInclude Include="src\gl\ITexturedRect.h" />
     <ClInclude Include="src\lib\Debug.h" />
+    <ClInclude Include="src\render\dash\DamageEffectRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -382,6 +383,7 @@
     <ClCompile Include="src\render\dash\RacePositionRenderer.cpp" />
     <ClCompile Include="src\gl\ShadowedTexturedRect.cpp" />
     <ClCompile Include="src\lib\Debug.cpp" />
+    <ClCompile Include="src\render\dash\DamageEffectRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
