--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -207,6 +207,7 @@
     <ClInclude Include="src\lib\Debug.h" />
     <ClInclude Include="src\render\dash\DamageEffectRenderer.h" />
     <ClInclude Include="src\render\dash\EnemyShipMarkRenderer.h" />
+    <ClInclude Include="src\render\dash\FinishDashboardRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -386,6 +387,7 @@
     <ClCompile Include="src\lib\Debug.cpp" />
     <ClCompile Include="src\render\dash\DamageEffectRenderer.cpp" />
     <ClCompile Include="src\render\dash\EnemyShipMarkRenderer.cpp" />
+    <ClCompile Include="src\render\dash\FinishDashboardRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
