--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="src\ai\SteeringLogic.h" />
     <ClInclude Include="src\ai\WeaponActivationLogic.h" />
     <ClInclude Include="src\anx\AudioResources.h" />
+    <ClInclude Include="src\anx\ColorTemperatureFunc.h" />
     <ClInclude Include="src\anx\RandomSpherePoints.h" />
     <ClInclude Include="src\audio\ALFormat.h" />
     <ClInclude Include="src\audio\AudioData.h" />
@@ -233,6 +234,7 @@
     <ClCompile Include="src\ai\SteeringLogic.cpp" />
     <ClCompile Include="src\ai\WeaponActivationLogic.cpp" />
     <ClCompile Include="src\anx\AudioResources.cpp" />
+    <ClCompile Include="src\anx\ColorTemperatureFunc.cpp" />
     <ClCompile Include="src\anx\RandomSpherePoints.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\audio\ALFormat.cpp" />
