--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -209,6 +209,7 @@
     <ClInclude Include="src\render\dash\EnemyShipMarkRenderer.h" />
     <ClInclude Include="src\render\dash\FinishDashboardRenderer.h" />
     <ClInclude Include="src\anx\ColorTemperatureFunc.h" />
+    <ClInclude Include="src\lib\Directory.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -390,6 +391,7 @@
     <ClCompile Include="src\render\dash\EnemyShipMarkRenderer.cpp" />
     <ClCompile Include="src\render\dash\FinishDashboardRenderer.cpp" />
     <ClCompile Include="src\anx\ColorTemperatureFunc.cpp" />
+    <ClCompile Include="src\lib\Directory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
