--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -210,6 +210,8 @@
     <ClInclude Include="src\render\dash\FinishDashboardRenderer.h" />
     <ClInclude Include="src\anx\ColorTemperatureFunc.h" />
     <ClInclude Include="src\lib\Directory.h" />
+    <ClInclude Include="src\render\mesh\ExhaustMesh.h" />
+    <ClInclude Include="src\render\common\ExhaustMeshRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -392,6 +394,8 @@
     <ClCompile Include="src\render\dash\FinishDashboardRenderer.cpp" />
     <ClCompile Include="src\anx\ColorTemperatureFunc.cpp" />
     <ClCompile Include="src\lib\Directory.cpp" />
+    <ClCompile Include="src\render\mesh\ExhaustMesh.cpp" />
+    <ClCompile Include="src\render\common\ExhaustMeshRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
