--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -212,6 +212,7 @@
     <ClInclude Include="src\lib\Directory.h" />
     <ClInclude Include="src\render\mesh\ExhaustMesh.h" />
     <ClInclude Include="src\render\common\ExhaustRenderer.h" />
+    <ClInclude Include="src\render\dash\MirrorViewRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -396,6 +397,7 @@
     <ClCompile Include="src\lib\Directory.cpp" />
     <ClCompile Include="src\render\mesh\ExhaustMesh.cpp" />
     <ClCompile Include="src\render\common\ExhaustRenderer.cpp" />
+    <ClCompile Include="src\render\dash\MirrorViewRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
