--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -75,6 +75,7 @@
     <ClInclude Include="src\input\InputDevices.h" />
     <ClInclude Include="src\input\Joystick.h" />
     <ClInclude Include="src\input\Keyboard.h" />
+    <ClInclude Include="src\input\Keys.h" />
     <ClInclude Include="src\lib\ArrayIndexGenerator.h" />
     <ClInclude Include="src\lib\Assert.h" />
     <ClInclude Include="src\lib\CycledIterator.h" />
