--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -215,6 +215,10 @@
     <ClInclude Include="src\render\dash\MirrorViewRenderer.h" />
     <ClInclude Include="src\render\mesh\BackgroundSphereMesh.h" />
     <ClInclude Include="src\input\Keys.h" />
+    <ClInclude Include="src\render\sm\ShadowMap.h" />
+    <ClInclude Include="src\render\sm\ShadowMaps.h" />
+    <ClInclude Include="src\render\sm\ShipShadowMapUpdater.h" />
+    <ClInclude Include="src\render\sm\ShadowMapsUpdater.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -401,6 +405,10 @@
     <ClCompile Include="src\render\common\ExhaustRenderer.cpp" />
     <ClCompile Include="src\render\dash\MirrorViewRenderer.cpp" />
     <ClCompile Include="src\render\mesh\BackgroundSphereMesh.cpp" />
+    <ClCompile Include="src\render\sm\ShadowMap.cpp" />
+    <ClCompile Include="src\render\sm\ShadowMaps.cpp" />
+    <ClCompile Include="src\render\sm\ShipShadowMapUpdater.cpp" />
+    <ClCompile Include="src\render\sm\ShadowMapsUpdater.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
