--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -60,7 +60,7 @@
     <ClInclude Include="src\game\inject\VoxInjectModule.h" />
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\Face.h" />
-    <ClInclude Include="src\calc\ModelMatrix.h" />
+    <ClInclude Include="src\calc\Matrix4.h" />
     <ClInclude Include="src\gl\ITexturedRect.h" />
     <ClInclude Include="src\gl\ShaderProgram.h" />
     <ClInclude Include="src\gl\FramedTexture.h" />
@@ -295,7 +295,7 @@
     <ClCompile Include="src\gl\ImageFile.cpp" />
     <ClCompile Include="src\gl\Mesh.cpp" />
     <ClCompile Include="src\gl\MeshLoader.cpp" />
-    <ClCompile Include="src\calc\ModelMatrix.cpp" />
+    <ClCompile Include="src\calc\Matrix4.cpp" />
     <ClCompile Include="src\gl\ShaderProgram.cpp" />
     <ClCompile Include="src\gl\ShadowedTexturedRect.cpp" />
     <ClCompile Include="src\gl\Texture.cpp" />
