--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="src\render\sm\ShadowMaps.h" />
     <ClInclude Include="src\render\sm\ShadowMapsUpdater.h" />
     <ClInclude Include="src\render\sm\ShipShadowMapUpdater.h" />
+    <ClInclude Include="src\render\sm\TrackShadowMapUpdater.h" />
     <ClInclude Include="src\render\ui\FinishRenderer.h" />
     <ClInclude Include="src\render\common\GraphicItemCollection.h" />
     <ClInclude Include="src\render\ui\PauseMenuRenderer.h" />
@@ -378,6 +379,7 @@
     <ClCompile Include="src\render\sm\ShadowMaps.cpp" />
     <ClCompile Include="src\render\sm\ShadowMapsUpdater.cpp" />
     <ClCompile Include="src\render\sm\ShipShadowMapUpdater.cpp" />
+    <ClCompile Include="src\render\sm\TrackShadowMapUpdater.cpp" />
     <ClCompile Include="src\render\ui\FinishRenderer.cpp" />
     <ClCompile Include="src\render\common\GraphicItemCollection.cpp" />
     <ClCompile Include="src\render\ui\RacePreparationRenderer.cpp" />
