TrackRenderer RenderForMirrorView. delete mainWithoutShadows shader

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="src\render\mesh\ExhaustMesh.h" />
     <ClInclude Include="src\render\mesh\TrackMesh.h" />
     <ClInclude Include="src\render\shader\ShaderPrograms.h" />
+    <ClInclude Include="src\render\sm\EmptyShadowMapInitializer.h" />
     <ClInclude Include="src\render\sm\ShadowMap.h" />
     <ClInclude Include="src\render\sm\ShadowMaps.h" />
     <ClInclude Include="src\render\sm\ShadowMapsUpdater.h" />
@@ -376,6 +377,7 @@
     <ClCompile Include="src\render\mesh\ExhaustMesh.cpp" />
     <ClCompile Include="src\render\mesh\TrackMesh.cpp" />
     <ClCompile Include="src\render\shader\ShaderPrograms.cpp" />
+    <ClCompile Include="src\render\sm\EmptyShadowMapInitializer.cpp" />
     <ClCompile Include="src\render\sm\ShadowMap.cpp" />
     <ClCompile Include="src\render\sm\ShadowMaps.cpp" />
     <ClCompile Include="src\render\sm\ShadowMapsUpdater.cpp" />
